--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+theme: minima
+title: Le Bateau-Livre
+author: Alan Leenard
+email: your-redanlir@bluewin.ch
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Leningrad, été 1989 - Le célèbre papyrus Golenitscheff, dit Papyrus 1115, du Musée égyptien de l'Hermitage à Leningrad, a disparu. 
+  Le reporter Sammy Lindon arrive dans l'ancienne capitale des tsars pour mener l'enquête.
 
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
