--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: Le Bateau-Livre
+author: Alan Leenart
+email: redanlir@bluewin.ch
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-
+  "Voyager c'est écrire, écrire c'est voyager" - Michel Butor 
+  "Je hais les voyages et les explorateurs" - Claude Lévi-Strauss
+  "Les voyages... petits vertiges pour couillons" - L. F. Céline
+  Ce site est dédié au voyage et à l'écriture
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+github_username:  Rogaton # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
